--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
+         <dependency>
+           <groupId>org.acme.quarkus.svelte</groupId>
+           <artifactId>sveltesse</artifactId>
+           <version>1.0.0-SNAPSHOT</version>
+         </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-amazon-lambda</artifactId>
